unpackaged/main/default/objects/Trial_Intent__c/Trial_Intent__c.object-meta.xml
<CustomObject>
    <label>Trial Intent</label>
    <nameField>
        <displayFormat>TI-{00000000}</displayFormat>
        <label>Trial Intent #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trial Intent</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>