unpackaged/main/default/objects/Trial_Intent__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account related to trial intent</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trial Intent</relationshipLabel>
    <relationshipName>Trial_Intent</relationshipName>
    <type>Lookup</type>
</CustomField>