unpackaged/main/default/objects/Trial_Intent__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact who submitted Trial Intent responses</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trial Intent</relationshipLabel>
    <relationshipName>Trial_Intent</relationshipName>
    <type>Lookup</type>
</CustomField>