unpackaged/main/default/objects/Trial_Intent__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Trial Intent</relationshipLabel>
    <relationshipName>Trial_Intent</relationshipName>
    <type>Lookup</type>
</CustomField>